5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1723_2497.log
== TEST (2019-05-09 10:33:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	tempo = tempo + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:33:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	tempo = tempo + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:35:48) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >1):
	rend = saldo * juros
	saldo = saldo + rend
	tempo = tempo + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:37:16) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >1):
	rend = saldo * juros
	saldo = saldo + rend
	tempo = tempo + 1

print(round(rend, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:39:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >1):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	tempo = tempo + 1

print(round(rend, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:39:47) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >1):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	tempo = tempo + 1
	print(round(rend, 2)) # Exibicao de resultados

	

-- OUTPUT:
23.01
23.93
24.89
25.88
26.92
28.0
29.11
30.28
31.49
32.75
34.06
35.42
36.84
38.31
39.85
41.44
43.1
44.82
46.61
48.48
50.42
52.43
54.53
56.71
58.98
61.34
63.79
66.35
69.0
71.76
74.63
77.62
80.72
83.95
87.31
90.8
94.43
98.21
102.14
106.22
110.47
114.89
119.49
124.27
129.24
134.41
139.78
145.37
151.19
157.24
163.52
170.07
176.87
183.94
191.3
198.95
206.91
215.19
223.79
232.75
242.06
251.74
261.81
272.28
283.17
294.5
306.28
318.53
331.27
344.52
358.3
372.64
387.54
403.04
419.16
435.93
453.37
471.5
490.36
509.98
530.38
551.59
573.65
596.6
620.46
645.28
671.09
697.94
725.86
754.89
785.09
816.49
849.15
883.11
918.44
955.18
993.38
1033.12
1074.44
1117.42
1162.12
1208.6
1256.95
1307.23
1359.51
1413.9
1470.45
1529.27
1590.44
1654.06
1720.22
1789.03
1860.59
1935.01
2012.41
2092.91
2176.63
2263.69
2354.24
2448.41
2546.35
2648.2
2754.13
2864.29
2978.86
3098.02
3221.94
3350.82
3484.85
3624.24
3769.21
3919.98
4076.78
4239.85
4409.45
4585.82
4769.26
4960.03
5158.43
5364.77
5579.36
5802.53
6034.63
627
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:40:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi !=1):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	tempo = tempo + 1
	print(round(rend, 2)) # Exibicao de resultados

	

-- OUTPUT:
23.01
23.93
24.89
25.88
26.92
28.0
29.11
30.28
31.49
32.75
34.06
35.42
36.84
38.31
39.85
41.44
43.1
44.82
46.61
48.48
50.42
52.43
54.53
56.71
58.98
61.34
63.79
66.35
69.0
71.76
74.63
77.62
80.72
83.95
87.31
90.8
94.43
98.21
102.14
106.22
110.47
114.89
119.49
124.27
129.24
134.41
139.78
145.37
151.19
157.24
163.52
170.07
176.87
183.94
191.3
198.95
206.91
215.19
223.79
232.75
242.06
251.74
261.81
272.28
283.17
294.5
306.28
318.53
331.27
344.52
358.3
372.64
387.54
403.04
419.16
435.93
453.37
471.5
490.36
509.98
530.38
551.59
573.65
596.6
620.46
645.28
671.09
697.94
725.86
754.89
785.09
816.49
849.15
883.11
918.44
955.18
993.38
1033.12
1074.44
1117.42
1162.12
1208.6
1256.95
1307.23
1359.51
1413.9
1470.45
1529.27
1590.44
1654.06
1720.22
1789.03
1860.59
1935.01
2012.41
2092.91
2176.63
2263.69
2354.24
2448.41
2546.35
2648.2
2754.13
2864.29
2978.86
3098.02
3221.94
3350.82
3484.85
3624.24
3769.21
3919.98
4076.78
4239.85
4409.45
4585.82
4769.26
4960.03
5158.43
5364.77
5579.36
5802.53
6034.63
627
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:41:48) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi > 1):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	tempo = tempo + 1

print(round(rend, 2)) # Exibicao de resultados

	

-- OUTPUT:
23.01
23.93
24.89
25.88
26.92
28.0
29.11
30.28
31.49
32.75
34.06
35.42
36.84
38.31
39.85
41.44
43.1
44.82
46.61
48.48
50.42
52.43
54.53
56.71
58.98
61.34
63.79
66.35
69.0
71.76
74.63
77.62
80.72
83.95
87.31
90.8
94.43
98.21
102.14
106.22
110.47
114.89
119.49
124.27
129.24
134.41
139.78
145.37
151.19
157.24
163.52
170.07
176.87
183.94
191.3
198.95
206.91
215.19
223.79
232.75
242.06
251.74
261.81
272.28
283.17
294.5
306.28
318.53
331.27
344.52
358.3
372.64
387.54
403.04
419.16
435.93
453.37
471.5
490.36
509.98
530.38
551.59
573.65
596.6
620.46
645.28
671.09
697.94
725.86
754.89
785.09
816.49
849.15
883.11
918.44
955.18
993.38
1033.12
1074.44
1117.42
1162.12
1208.6
1256.95
1307.23
1359.51
1413.9
1470.45
1529.27
1590.44
1654.06
1720.22
1789.03
1860.59
1935.01
2012.41
2092.91
2176.63
2263.69
2354.24
2448.41
2546.35
2648.2
2754.13
2864.29
2978.86
3098.02
3221.94
3350.82
3484.85
3624.24
3769.21
3919.98
4076.78
4239.85
4409.45
4585.82
4769.26
4960.03
5158.43
5364.77
5579.36
5802.53
6034.63
627
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:42:47) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi > 1):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	tempo = tempo + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
23.01
23.93
24.89
25.88
26.92
28.0
29.11
30.28
31.49
32.75
34.06
35.42
36.84
38.31
39.85
41.44
43.1
44.82
46.61
48.48
50.42
52.43
54.53
56.71
58.98
61.34
63.79
66.35
69.0
71.76
74.63
77.62
80.72
83.95
87.31
90.8
94.43
98.21
102.14
106.22
110.47
114.89
119.49
124.27
129.24
134.41
139.78
145.37
151.19
157.24
163.52
170.07
176.87
183.94
191.3
198.95
206.91
215.19
223.79
232.75
242.06
251.74
261.81
272.28
283.17
294.5
306.28
318.53
331.27
344.52
358.3
372.64
387.54
403.04
419.16
435.93
453.37
471.5
490.36
509.98
530.38
551.59
573.65
596.6
620.46
645.28
671.09
697.94
725.86
754.89
785.09
816.49
849.15
883.11
918.44
955.18
993.38
1033.12
1074.44
1117.42
1162.12
1208.6
1256.95
1307.23
1359.51
1413.9
1470.45
1529.27
1590.44
1654.06
1720.22
1789.03
1860.59
1935.01
2012.41
2092.91
2176.63
2263.69
2354.24
2448.41
2546.35
2648.2
2754.13
2864.29
2978.86
3098.02
3221.94
3350.82
3484.85
3624.24
3769.21
3919.98
4076.78
4239.85
4409.45
4585.82
4769.26
4960.03
5158.43
5364.77
5579.36
5802.53
6034.63
627
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:44:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora
t = 0
while (qi == 1):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	tempo = tempo + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:44:59) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora
t = 0
while (qi> 1):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	tempo = tempo + 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:54:37) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora
t = 0
while (qi> 1):
	rend = (saldo * juros)/100
	saldo = saldo + rend
	tempo = tempo - 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:56:07) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora
t = 0
while (qi> 1):
	rend = (saldo * juros)
	saldo = saldo + rend
	tempo = tempo - 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:02:52) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora
t = 0
while (t <tempo):
	rend = (saldo * juros)
	saldo = saldo + rend
	tempo = tempo - 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:03:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora
t = 0
while (qi> 1):
	rend = (saldo * juros)
	saldo = saldo + rend
	tempo = tempo - 1
print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
409.364
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:03:47) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora
t = 0
while (t <tempo):
	rend = (saldo * juros)
	saldo = saldo + rend
	tempo = tempo - 1
		print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 14
    print(round(saldo, 2)) # Exibicao de resultados
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:03:55) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora
t = 0
while (t <tempo):
	rend = (saldo * juros)
	saldo = saldo + rend
	tempo = tempo - 1
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:04:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora
t = 0
while (t <tempo):
	rend = (saldo * juros)
	saldo = saldo + rend
	tempo = tempo - 1
	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.20681
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 21:06:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora
t = 0
while (t <tempo):
	rend = (saldo * juros)
	saldo = saldo + rend
	tempo = tempo - 1
	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.192619
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 21:06:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora
t = 0
while (t <tempo):
	rend = (saldo * juros)
	saldo = saldo + rend
	tempo = tempo - 1
	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
